--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
   </head>
   <body>
     <div class="container">
-      <h4>Welcome to Docker Container running inside  EKS Cluster - Mar 30th, 2022!!</h4>
-      <h4>Deploying Containers into EKS cluster using Jenkins Pipeline !!!!!</h4>
+      <h4>Eghosa WorkShop Inside AKS With Docker Image And Packages - April 27th, 2022!!</h4>
+      <h4>Deploying Packages Into AKS CLuster Using AzureDevOps Pipeline !!!!!</h4>
       <br>
-       <h4>Learning containers is really fun and awesome!!!!!</h4>
+       <h4>Deploment With AzureDevOps Pipeline Is Fun And Enterainging!!!!!</h4>
     </div>
   </body>
 </html>
